--- a/CMDConsoleGame_cpp/game_w_wati.vcxproj.filters
+++ b/CMDConsoleGame_cpp/game_w_wati.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="platform_conio.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="platform_conio.h">
@@ -39,6 +36,12 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="enemy.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="progBar.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="mainDraw.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
