--- a/CMDConsoleGame_cpp/game_w_wati.vcxproj.filters
+++ b/CMDConsoleGame_cpp/game_w_wati.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="enemy.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="List.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
