--- a/CMDConsoleGame_cpp/game_w_wati.vcxproj
+++ b/CMDConsoleGame_cpp/game_w_wati.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="entity.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="List.h" />
+    <ClInclude Include="map2d.h" />
     <ClInclude Include="platform_conio.h" />
     <ClInclude Include="vector2.h" />
   </ItemGroup>
