--- a/CMDConsoleGame_cpp/game_w_wati.vcxproj.filters
+++ b/CMDConsoleGame_cpp/game_w_wati.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="List.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="map2d.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
